[package]
name = "mims"
version = "0.1.0"
authors = ["tal kidron <ta.kidron@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.85"
tokio = {version = "1.13.0", features = ["full"]}
tokio-stream = "0.1.8"
pin-project = "1.0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
cc = "1.0.66"
pkg-config = "0.3.19"
